--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -79,7 +79,7 @@
                     
                     <!-- Elementos siempre visibles -->
                     <li sec:authorize="!hasRole('ROLE_ADMIN')" class="nav-item active">
-                        <a class="nav-link" href="/home/yourteam" style="white-space: nowrap;">Drinks</a>
+                        <a class="nav-link" href="/home/showDrinks" style="white-space: nowrap;">Drinks</a>
                     </li>
                     <li sec:authorize="!hasRole('ROLE_ADMIN')" class="nav-item active">
                         <a class="nav-link" href="/home/yourteam" style="white-space: nowrap;">Soon Events</a>
