--- a/src/main/resources/templates/showdrinks.html
+++ b/src/main/resources/templates/showdrinks.html
@@ -254,7 +254,7 @@
 								<p><strong th:text="${drink.drinkname}">Nombre de la bebida</strong></p>
 								<div>
 									<img th:src="${drink.imageUrl}" alt="Imagen de la bebida"
-										style="max-width: 50%; height: auto;" />
+										style="max-width: 120px; max-height: 120px;" />
 								</div>
 								<p><span th:text="${drink.drinkdescription}">Descripción</span></p>
 								<p><strong>Precio:</strong> <span th:text="${drink.drinkprice}">Precio</span> €</p>
