--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -65,13 +65,12 @@
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <!-- Mostrar solo para usuarios con rol ADMIN -->
                     <li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item dropdown">
-                        <a class="nav-link" href="/admin/showDrinks" role="button" data-bs-toggle="dropdown"
-                           aria-expanded="false" style="white-space: nowrap;">
+                        <a class="nav-link" href="/admin/showDrinks"style="white-space: nowrap;">
                             Drinks
                         </a>
                     </li>
                     <li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item">
-                        <a class="nav-link" href="/admin/editusers" style="white-space: nowrap;">Events</a>
+                        <a class="nav-link" href="/admin/showEvents" style="white-space: nowrap;">Events</a>
                     </li>
                     <li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item">
                         <a class="nav-link" href="/admin/registermultimedia" style="white-space: nowrap;">Job Applications</a>
