--- a/src/main/resources/templates/editevent.html
+++ b/src/main/resources/templates/editevent.html
@@ -2,189 +2,196 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <link th:href="@{/webjars/bootstrap/5.3.2/css/bootstrap.min.css}" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>BAR DAMM</title>
-    <style>
-        /* Existing styles... */
-        body,
-        html {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-start;
-            align-items: center;
-            font-family: "Helvetica", "Arial", sans-serif;
-        }
+	<meta charset="UTF-8">
+	<link th:href="@{/webjars/bootstrap/5.3.2/css/bootstrap.min.css}" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<title>BAR DAMM</title>
+	<style>
+		/* Existing styles... */
+		body,
+		html {
+			margin: 0;
+			padding: 0;
+			height: 100%;
+			display: flex;
+			flex-direction: column;
+			justify-content: flex-start;
+			align-items: center;
+			font-family: "Helvetica", "Arial", sans-serif;
+		}
 
-        .container {
-            width: 100%;
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-start;
-        }
+		.container {
+			width: 100%;
+			flex: 1;
+			display: flex;
+			flex-direction: column;
+			justify-content: flex-start;
+		}
 
-        .content {
-            margin-top: 2%;
-            flex-grow: 1;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
+		.content {
+			margin-top: 2%;
+			flex-grow: 1;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+		}
 
-        .form-container {
-            background-color: rgba(255, 255, 255, 0.8);
-            padding: 30px;
-            border-radius: 15px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            max-width: 600px;
-            width: 100%;
-            margin-top: 15%;
-        }
+		.form-container {
+			background-color: rgba(255, 255, 255, 0.8);
+			padding: 30px;
+			border-radius: 15px;
+			box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+			max-width: 600px;
+			width: 100%;
+			margin-top: 15%;
+		}
 
-        .form-group {
-            margin-bottom: 15px;
-        }
+		.form-group {
+			margin-bottom: 15px;
+		}
 
-        label {
-            font-weight: bold;
-        }
+		label {
+			font-weight: bold;
+		}
 
-        select,
-        input {
-            width: 100%;
-            padding: 8px;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-        }
+		select,
+		input {
+			width: 100%;
+			padding: 8px;
+			border-radius: 5px;
+			border: 1px solid #ccc;
+		}
 
-        .btn-submit {
-            background-color: blue;
-            color: white;
-            padding: 10px 15px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
+		.btn-submit {
+			background-color: blue;
+			color: white;
+			padding: 10px 15px;
+			border: none;
+			border-radius: 5px;
+			cursor: pointer;
+		}
 
-        .btn-submit:hover {
-            background-color: darkblue;
-        }
+		.btn-submit:hover {
+			background-color: darkblue;
+		}
 
-        .logo-container {
-            position: absolute;
-            top: 0;
-            left: 50%;
-            transform: translateX(-50%);
-            z-index: -1;
-            
-        }
+		.logo-container {
+			position: absolute;
+			top: 0;
+			left: 50%;
+			transform: translateX(-50%);
+			z-index: -1;
 
-        footer {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            color: gray;
-            margin: 0;
-            padding: 0;
-            font-size: 14px;
-            width: 100%;
-            text-align: left;
-            padding-left: 10px;
-        }
+		}
 
-        .error-message {
-            color: red;
-            font-weight: bold;
-            margin-top: 10px;
-        }
+		footer {
+			position: fixed;
+			bottom: 0;
+			left: 0;
+			color: gray;
+			margin: 0;
+			padding: 0;
+			font-size: 14px;
+			width: 100%;
+			text-align: left;
+			padding-left: 10px;
+		}
 
-        .mini-form {
-            display: none;
-            margin-top: 15px;
-            padding: 15px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            background-color: #f9f9f9;
-        }
+		.error-message {
+			color: red;
+			font-weight: bold;
+			margin-top: 10px;
+		}
 
-        .mini-form input {
-            margin-bottom: 10px;
-        }
+		.mini-form {
+			display: none;
+			margin-top: 15px;
+			padding: 15px;
+			border: 1px solid #ccc;
+			border-radius: 5px;
+			background-color: #f9f9f9;
+		}
 
-        .mini-form button {
-            background-color: green;
-            color: white;
-            padding: 5px 10px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
+		.mini-form input {
+			margin-bottom: 10px;
+		}
 
-        .mini-form button:hover {
-            background-color: darkgreen;
-        }
-    </style>
+		.mini-form button {
+			background-color: green;
+			color: white;
+			padding: 5px 10px;
+			border: none;
+			border-radius: 5px;
+			cursor: pointer;
+		}
+
+		.mini-form button:hover {
+			background-color: darkgreen;
+		}
+	</style>
 </head>
 
-<body style="background-image: url('/imgs/fondobar.jpg'); background-size: cover; background-position: center center; background-repeat: no-repeat; background-attachment: fixed;">
+<body
+	style="background-image: url('/imgs/fondobar.jpg'); background-size: cover; background-position: center center; background-repeat: no-repeat; background-attachment: fixed;">
 
-    <div class="container">
-        <div class="content">
-
-
-            <!-- Contenedor para el logo -->
-            <div class="logo-container">
-                <img src="/imgs/logobar.png" alt="Logo Bar DAMM" style="width: 100px;">
-            </div>
-
-            <!-- Contenedor del formulario -->
-            <div class="form-container">
-                <h1>Edit Event</h1>
-                <form id="drink-form" th:action="@{'/admin/editEvent/update/' + ${id}}" th:object="${event}" method="POST" enctype="multipart/form-data">
-                    <input type="hidden" th:if="${_csrf}" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-
-                    <!-- Nombre de la bebida -->
-                    <div class="form-group">
-                        <label for="eventname">Event's Name:</label>
-                        <input type="text" th:field="*{eventname}" id="eventname" name="eventname" placeholder="Introduce the event's name">
-                    </div>
-
-                    <!-- Descripción de la bebida -->
-                    <div class="form-group">
-                        <label for="eventdescription">Event's Description:</label>
-                        <input id="eventdescription" th:field="*{eventdescription}" name="eventdescription" placeholder="Introduce the event's description">
-                    </div>
+	<div class="container">
+		<div class="content">
 
 
-                    
+			<!-- Contenedor para el logo -->
+			<div class="logo-container">
+				<img src="/imgs/logobar.png" alt="Logo Bar DAMM" style="width: 100px;">
+			</div>
 
-                    <!-- Imagen de la bebida -->
-                    <div class="form-group">
-                        <label for="eventimage">Event's Image (PNG, JPG):</label>
-                        <input type="file" th:field="*{eventImageFile}" id="eventimage" name="eventImageFile" accept="image/png, image/jpeg" >
-                    </div>
+			<!-- Contenedor del formulario -->
+			<div class="form-container">
+				<h1>Edit Event</h1>
+				<form id="drink-form" th:action="@{'/admin/editEvent/update/' + ${id}}" th:object="${event}"
+					method="POST" enctype="multipart/form-data">
+					<input type="hidden" th:if="${_csrf}" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 
-                    <!-- Botones para guardar o retroceder -->
-                    <div class="form-group" style="display: flex; gap: 10px;">
-                        <button type="submit" class="btn-submit">Update Event</button>
-                        <a href="/admin/showEvents" class="btn btn-secondary" style="padding: 10px 15px; border-radius: 5px; background-color: red; color: black;">BACK</a>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
+					<!-- Nombre de la bebida -->
+					<div class="form-group">
+						<label for="eventname">Event's Name:</label>
+						<input type="text" th:field="*{eventname}" id="eventname" name="eventname"
+							placeholder="Introduce the event's name">
+					</div>
 
-    <footer>
-        © 2024 Copyright: BAR DAMM
-    </footer>
+					<!-- Descripción de la bebida -->
+					<div class="form-group">
+						<label for="eventdescription">Event's Description:</label>
+						<input id="eventdescription" th:field="*{eventdescription}" name="eventdescription"
+							placeholder="Introduce the event's description">
+					</div>
+					<div class="form-group">
+						<label for="eventenddate">Event's End Date: </label>
+						<input type="datetime-local" th:value="*{eventenddate}"
+							id="eventenddate" name="eventenddate" placeholder="Select the end date and time">
+					</div>
+					<!-- Imagen de la bebida -->
+					<div class="form-group">
+						<label for="eventimage">Event's Image (PNG, JPG):</label>
+						<input type="file" th:field="*{eventImageFile}" id="eventimage" name="eventImageFile"
+							accept="image/png, image/jpeg">
+					</div>
 
-    
+					<!-- Botones para guardar o retroceder -->
+					<div class="form-group" style="display: flex; gap: 10px;">
+						<button type="submit" class="btn-submit">Update Event</button>
+						<a href="/admin/showEvents" class="btn btn-secondary"
+							style="padding: 10px 15px; border-radius: 5px; background-color: red; color: black;">BACK</a>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+
+	<footer>
+		© 2024 Copyright: BAR DAMM
+	</footer>
+
+
 
 </body>
 
