--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -81,7 +81,7 @@
                         <a class="nav-link" href="/home/showDrinks" style="white-space: nowrap;">Drinks</a>
                     </li>
                     <li sec:authorize="!hasRole('ROLE_ADMIN')" class="nav-item active">
-                        <a class="nav-link" href="/home/yourteam" style="white-space: nowrap;">Soon Events</a>
+                        <a class="nav-link" href="/home/showEvents" style="white-space: nowrap;">Soon Events</a>
                     </li>
                     <li sec:authorize="!hasRole('ROLE_ADMIN')" class="nav-item active">
                         <a class="nav-link" href="/home/aboutus" style="white-space: nowrap;">About us</a>
