--- a/src/main/resources/templates/updateuser.html
+++ b/src/main/resources/templates/updateuser.html
@@ -20,14 +20,12 @@
 
 		.login-container {
 			background-color: rgba(255, 255, 255, 0.8);
-			/* Color de fondo con opacidad */
 			padding: 20px;
 			height: 65%;
 			width: 40%;
 			border-radius: 8px;
 			box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 			text-align: center;
-			/* Centra el contenido del contenedor */
 		}
 
 		input[type="text"],
@@ -39,15 +37,28 @@
 			border: 1px solid #ccc;
 		}
 
-		input[type="submit"] {
-			background-color: #007bff;
+		input[type="submit"],
+		.back-button {
 			padding: 10px;
-			width: 100%;
+			width: 48%;
 			margin-bottom: 10px;
 			border-radius: 4px;
-			border: 1px solid #ccc;
 			color: #fff;
 			cursor: pointer;
+			text-align: center;
+			font-weight: bold;
+		}
+
+		#boton {
+			background-color: #007bff;
+			border: 1px solid #ccc;
+		}
+
+		.back-button {
+			background-color: #6c757d;
+			border: 1px solid #ccc;
+			text-decoration: none;
+			display: inline-block;
 		}
 
 		.error-message {
@@ -57,23 +68,24 @@
 			border-radius: 4px;
 			padding: 10px;
 			display: none;
-			/* Ocultar por defecto */
 		}
 
 		form {
 			position: relative;
-			/* Establecer posición relativa para el formulario */
 			text-align: left;
-			/* Alinea el texto a la izquierda */
 		}
 
 		.error-message {
 			position: absolute;
 			top: 100%;
-			/* Colocar el mensaje de error debajo del formulario */
 			left: 50%;
 			transform: translateX(-50%);
-			/* Centrar horizontalmente */
+		}
+
+		.button-container {
+			display: flex;
+			justify-content: space-between;
+			margin-top: 20px;
 		}
 	</style>
 </head>
@@ -81,51 +93,46 @@
 <body style="background-image: url('/imgs/fondologin-register.jpg');">
 	<div class="login-container">
 		<h2 style="text-align: center;">Edit Profile</h2>
-		<form th:action="@{/home/editUser/edit/{id_user}(id_user=${id_user})}" th:object="${usuario}" method="post">
-			<input type="hidden" name="id_user" th:value="${usuario.id_user}">
+		<form th:action="@{/home/editUser/edit/{iduser}(iduser=${iduser})}" th:object="${usuario}" method="post">
+			<input type="hidden" name="iduser" th:value="${usuario.iduser}">
 			<div class="form-label-group">
 				<label><strong>Name:</strong></label>
-				<input type="text" th:field="*{name}" class="form-control" placeholder="Nombre" name="name" required />
+				<input type="text" th:field="*{name}" class="form-control" placeholder="Nombre" name="name" />
 			</div>
 			<div class="form-label-group">
 				<label><strong>Username:</strong></label>
-				<input type="text" th:field="*{username}" class="form-control" placeholder="Usuario" name="username"
-					required />
+				<input type="text" th:field="*{username}" class="form-control" placeholder="Usuario" name="username" />
+			</div>
+			<div class="form-label-group">
+				<label><strong>Email:</strong></label>
+				<input type="text" th:field="*{email}" class="form-control" placeholder="Email" name="email" />
 			</div>
 			<div class="form-label-group">
 				<label><strong>Password:</strong></label>
-				<input type="password" th:field="*{password}" class="form-control" placeholder="Password"
-					name="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*\W).{8,}"
+				<input type="password" th:field="*{password}" class="form-control" placeholder="Password" name="password"
+					pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*\W).{8,}"
 					title="The password must contain at least 8 characters, including at least one uppercase letter, one lowercase letter, one number, and one special character."
 					oninput="passwordConfirmation.setCustomValidity(''); checkPasswordMatch();">
-
 			</div>
 
 			<div class="form-label-group">
 				<label><strong>Repeat Password:</strong></label>
 				<input type="password" class="form-control" placeholder="Repetir Password" name="passwordConfirmation"
-					 title="Passwords do not match" oninput="checkPasswordMatch();">
+					title="Passwords do not match" oninput="checkPasswordMatch();">
 				<div id="passwordMatchError" style="color: red; display: none;">Passwords do not match</div>
 			</div>
-			<div class="form-label-group">
-				<label for="id_team_user"><strong>Favourite Team:</strong></label>
-				<br>
-				<select style="margin-top: 2%;" class="form-control" id="id_team_user" name="id_team_user">
-					<option value="">Select a Team</option>
-					<option th:field="*{id_team_user}" th:each="team : ${teams}" th:value="${team.id_team}"
-						th:text="${team.name}">Equipo</option>
-				</select>
+
+			<div class="button-container">
+				<input id="boton" type="submit" value="Edit" />
+				<a href="/home/index" style="background-color: red;" class="back-button">Back</a>
 			</div>
-			<br>
-			<input class="btn btn-lg btn-primary btn-block text-uppercase" id="boton" type="submit" value="Edit" />
 		</form>
 	</div>
 </body>
+
 <script>
-	// Obtener el elemento de mensaje de error
 	var errorMessage = document.querySelector('.error-message');
 
-	// Mostrar el mensaje de error si tiene texto
 	if (errorMessage.textContent.trim() !== '') {
 		errorMessage.style.display = 'block';
 	}
